tests/ui/traits/const-traits/syntactical-unstable.stderr
error[E0658]: use of unstable const library feature `unstable`
  --> $DIR/syntactical-unstable.rs:13:19
   |
LL | trait Foo: ~const MyTrait {
   |            ------ ^^^^^^^
   |            |
   |            trait is not stable as const yet
   |
   = help: add `#![feature(unstable)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable const library feature `unstable`
  --> $DIR/syntactical-unstable.rs:19:44
   |
LL | const fn where_clause<T>() where T: ~const MyTrait {}
   |                                     ------ ^^^^^^^
   |                                     |
   |                                     trait is not stable as const yet
   |
   = help: add `#![feature(unstable)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable const library feature `unstable`
  --> $DIR/syntactical-unstable.rs:22:52
   |
LL | const fn nested<T>() where T: Deref<Target: ~const MyTrait> {}
   |                                             ------ ^^^^^^^
   |                                             |
   |                                             trait is not stable as const yet
   |
   = help: add `#![feature(unstable)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable const library feature `unstable`
  --> $DIR/syntactical-unstable.rs:25:32
   |
LL | const fn rpit() -> impl ~const MyTrait { Local }
   |                         ------ ^^^^^^^
   |                         |
   |                         trait is not stable as const yet
   |
   = help: add `#![feature(unstable)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable const library feature `unstable`
  --> $DIR/syntactical-unstable.rs:29:12
   |
LL | impl const MyTrait for Local {
   |            ^^^^^^^ trait is not stable as const yet
   |
   = help: add `#![feature(unstable)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable const library feature `unstable`
  --> $DIR/syntactical-unstable.rs:15:23
   |
LL |     type Item: ~const MyTrait;
   |                ------ ^^^^^^^
   |                |
   |                trait is not stable as const yet
   |
   = help: add `#![feature(unstable)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0658`.
